# visual-tracking-control

./: .gitignore  CMakeLists.txt  README.md
app/: reaching.xml  (+15 more)
src/: BrownianMotion.cpp  CMakeLists.txt  Proprioception.cpp  VisualParticleFilterCorrection.cpp  VisualProprioception.cpp  VisualSIRParticleFilter.cpp  idl_rfm.thrift  main.cpp
src/hand-tracking/: CMakeLists.txt
src/hand-tracking/app/: hand-tracking-BATCH.xml  hand-tracking-SIM.xml  hand-tracking-Walkman-BATCH.xml  hand-tracking-Walkman-Batch.xml  hand-tracking-iCub-BATCH.xml  hand-tracking-iCub-Batch.xml  hand-tracking-iCub-SIM.xml  hand-tracking-iCub-Sim.xml  hand-tracking-iCub.xml  hand-tracking.xml
src/hand-tracking/conf/: config.ini
src/hand-tracking/include/: BrownianMotion.h  BrownianMotionPose.h  CVMatData.h  Camera.h  CameraData.h  CartesianAxisAngleBrownianMotion.h  CartesianAxisAnglePrediction.h  ChiSquare.h  DrawFwdKinPoses.h  DrawParticlesImportanceThreshold.h  DrawParticlesPose.h  DrawParticlesPoseCondWeight.h  DrawPose.h  DrawPoseParticle.h  FwdKinModel.h  GatePose.h  GatePoseParticle.h  HistogramNormChi.h  HistogramNormOne.h  HistogramNormTwoChi.h  HistogramNormTwoKLD.h  InitPoseParticles.h  InitPoseParticlesAxisAngle.h  InitWalkmanArm.h  InitiCubArm.h  KLD.h  KinPoseModel.h  KinPoseModelAxisAngle.h  MeshModel.h  NormOne.h  NormTwo.h  NormTwoChiSquare.h  NormTwoKLD.h  NormTwoKLDChiSquare.h  OpenCVToThrust.h  PlayFwdKinModel.h  PlayFwdKinMotion.h  PlayGatePose.h  PlayWalkmanPoseModel.h  PlayiCubFwdKinModel.h  (+21 more)
src/hand-tracking/shader/: shader_background.frag  shader_background.vert  shader_frame.frag  shader_frame.vert  shader_model.frag  shader_model.vert
src/hand-tracking/src/: BrownianMotion.cpp  BrownianMotionPose.cpp  CartesianAxisAngleBrownianMotion.cpp  CartesianAxisAnglePrediction.cpp  DrawFwdKinPoses.cpp  DrawParticlesImportanceThreshold.cpp  DrawParticlesPose.cpp  DrawParticlesPoseCondWeight.cpp  DrawPose.cpp  DrawPoseParticle.cpp  FwdKinModel.cpp  GatePose.cpp  GatePoseParticle.cpp  HistogramNormChi.cpp  HistogramNormOne.cpp  HistogramNormTwoChi.cpp  HistogramNormTwoKLD.cpp  InitPoseParticles.cpp  InitPoseParticlesAxisAngle.cpp  InitWalkmanArm.cpp  InitiCubArm.cpp  KinPoseModel.cpp  KinPoseModelAxisAngle.cpp  PlayFwdKinModel.cpp  PlayFwdKinMotion.cpp  PlayGatePose.cpp  PlayWalkmanPoseModel.cpp  PlayiCubFwdKinModel.cpp  ResamplingWithPrior.cpp  VisualParticleFilterCorrection.cpp  VisualProprioception.cpp  VisualSIRParticleFilter.cpp  VisualSIS.cpp  VisualSISParticleFilter.cpp  VisualUpdateParticles.cpp  WalkmanArmModel.cpp  WalkmanCamera.cpp  device_likelihood.cu  devicelikelihood.cu  iCubArmModel.cpp  (+8 more)
src/hand-tracking/src/cpu/: ChiSquare.cpp  HistogramNormOne.cpp  HistogramNormTwoChi.cpp  KLD.cpp  NormOne.cpp  NormTwo.cpp  NormTwoChiSquare.cpp  NormTwoKLD.cpp  NormTwoKLDChiSquare.cpp  VisualProprioception.cpp
src/hand-tracking/src/cuda/: ChiSquare.cpp  HistogramNormOne.cpp  HistogramNormTwoKLD.cpp  KLD.cpp  NormOne.cpp  NormTwo.cpp  NormTwoChiSquare.cpp  NormTwoKLD.cpp  NormTwoKLDChiSquare.cpp  VisualProprioception.cpp  device_likelihood.cu
src/hand-tracking/thrift/: idl_visualsirpf.thrift  visualsirpf.thrift  visualsisparticlefilter.thrift  visualsispf.thrift
src/reaching/: CMakeLists.txt  main.cpp
src/reaching_pose/: CMakeLists.txt  main.cpp
src/visual-servoing/: CMakeLists.txt  main.cpp
src/visual-servoing/client-visual-servoing/: CMakeLists.txt
src/visual-servoing/client-visual-servoing/include/: ClientVisualServoing.h
src/visual-servoing/client-visual-servoing/src/: ClientVisualServoing.cpp  main.cpp
src/visual-servoing/client-visual-servoing/thrift/: idl_clientvisualservoing.thrift
src/visual-servoing/include/: ServerVisualServoing.h
src/visual-servoing/server-visual-servoing/: CMakeLists.txt
src/visual-servoing/server-visual-servoing/include/: ServerVisualServoing.h
src/visual-servoing/server-visual-servoing/src/: ServerVisualServoing.cpp  main.cpp
src/visual-servoing/src/: ServerVisualServoing.cpp  main.cpp
src/visual-servoing/thrift/: idl_servervisualservoing.thrift
src/visual-servoing/visualservoingclient/: CMakeLists.txt
src/visual-servoing/visualservoingclient-app/: CMakeLists.txt
src/visual-servoing/visualservoingclient-app/src/: main.cpp
src/visual-servoing/visualservoingclient/conf/: visualservoingclient.ini
src/visual-servoing/visualservoingclient/include/: VisualServoingClient.h
src/visual-servoing/visualservoingclient/src/: VisualServoingClient.cpp
src/visual-servoing/visualservoingclient/thrift/: visualservoing.thrift
src/visual-servoing/visualservoingserver/: CMakeLists.txt
src/visual-servoing/visualservoingserver-app/: CMakeLists.txt
src/visual-servoing/visualservoingserver-app/src/: main.cpp
src/visual-servoing/visualservoingserver/conf/: visualservoingserver.ini
src/visual-servoing/visualservoingserver/include/: VisualServoingServer.h
src/visual-servoing/visualservoingserver/src/: VisualServoingServer.cpp
src/visual-servoing/visualservoingserver/thrift/: visualservoing.thrift  visualservoingserver.thrift
src/visualservoing/: CMakeLists.txt
src/visualservoing/visualservoingclient/: CMakeLists.txt
src/visualservoing/visualservoingclient-app/: CMakeLists.txt
src/visualservoing/visualservoingclient-app/src/: main.cpp
src/visualservoing/visualservoingclient/include/: VisualServoingClient.h
src/visualservoing/visualservoingclient/src/: VisualServoingClient.cpp
src/visualservoing/visualservoingclient/thrift/: visualservoing.thrift
src/visualservoing/visualservoingcommon/app/: BackgroundApps-SIM.xml  visualservoing-SIM.xml  visualservoing-click.xml  visualservoing-datadump.xml  visualservoing.xml
src/visualservoing/visualservoingcommon/include/: VisualServoingCommon.h
src/visualservoing/visualservoingserver/: CMakeLists.txt
src/visualservoing/visualservoingserver-app/: CMakeLists.txt
src/visualservoing/visualservoingserver-app/src/: main.cpp
src/visualservoing/visualservoingserver/include/: VisualServoingServer.h
src/visualservoing/visualservoingserver/src/: VisualServoingServer.cpp
(+712 files in other folders)
